# parking_garage_control_system

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  ACT.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Doxyfile  EntryGateController_8cpp.html  EntryGateController_8cpp__incl.map  EntryGateController_8cpp__incl.md5  EntryGateController_8h.html  EntryGateController_8h.js  EntryGateController_8h__dep__incl.map  EntryGateController_8h__dep__incl.md5  EntryGateController_8h__incl.map  EntryGateController_8h__incl.md5  EntryGateController_8h_source.html  EspGpioInput_8cpp.html  EspGpioInput_8cpp__incl.map  EspGpioInput_8cpp__incl.md5  EspGpioInput_8h.html  EspGpioInput_8h.js  EspGpioInput_8h__dep__incl.map  EspGpioInput_8h__dep__incl.md5  EspGpioInput_8h__incl.map  EspGpioInput_8h__incl.md5  EspGpioInput_8h_source.html  EspGpioOutput_8cpp.html  EspGpioOutput_8cpp__incl.map  EspGpioOutput_8cpp__incl.md5  EspGpioOutput_8h.html  EspGpioOutput_8h.js  EspGpioOutput_8h__dep__incl.map  EspGpioOutput_8h__dep__incl.md5  EspGpioOutput_8h__incl.map  (+472 more)
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
_layouts/: default.html
components/parking_system/: CMakeLists.txt
components/parking_system/include/events/: Event.h  FreeRtosEventBus.h  IEventBus.h
components/parking_system/include/gates/: EntryGateController.h  ExitGateController.h  Gate.h  IGate.h
components/parking_system/include/hal/: EspGpioInput.h  EspGpioOutput.h  EspServoOutput.h  IGpioInput.h  IGpioOutput.h
components/parking_system/include/parking/: ParkingGarageConfig.h  ParkingGarageSystem.h  ParkingSystem.h
components/parking_system/include/tickets/: ITicketService.h  Ticket.h  TicketService.h
components/parking_system/src/events/: FreeRtosEventBus.cpp
components/parking_system/src/gates/: EntryGateController.cpp  ExitGateController.cpp  Gate.cpp
components/parking_system/src/hal/: EspGpioInput.cpp  EspGpioOutput.cpp  EspServoOutput.cpp
components/parking_system/src/parking/: ParkingGarageConfig.cpp  ParkingGarageSystem.cpp  ParkingSystem.cpp
components/parking_system/src/tickets/: TicketService.cpp
components/parking_system/test/: CMakeLists.txt  test_entry_gate_hw.cpp  test_exit_gate_hw.cpp
coverage/: COVERAGE_REPORT.md  coverage.EntryGateController.cpp.2395a6ae7f567b735d5f311cdd334903.html  coverage.EntryGateController.h.955ed739fff998edcfb825992cb21ca4.html  coverage.EspGpioInput.cpp.3a6783fdc5b08811a071c5d85b4d47f1.html  (+32 more)
test/: CMakeLists.txt  README.md  bin_test_console_workflow  bin_test_entry_gate  bin_test_exit_gate  bin_test_integration  test_console_workflow.cpp  test_entry_gate.cpp  test_exit_gate.cpp  test_integration.cpp
test/mocks/: ConsoleHarness.cpp  MockEventBus.h  MockGate.h  MockGpioInput.h  MockGpioOutput.h  MockTicketService.h
test/stubs/: esp_attr.h  esp_console.h  esp_err.h  esp_log.h  esp_timer.h
test/stubs/driver/: gpio.h  ledc.h
test/stubs/freertos/: FreeRTOS.h  queue.h  semphr.h  timers.h
test/unit-tests/: test_console_workflow.cpp  test_entry_gate.cpp  test_exit_gate.cpp  test_integration.cpp
test/unit-tests/mocks/: ConsoleHarness.h  MockEventBus.h  MockGpioInput.h  MockTicketService.h
test/unit-tests/stubs/: esp_console.h  esp_err.h  esp_idf_version.h  esp_timer.h
test/unit-tests/stubs/driver/: gpio.h  ledc.h
test/unit-tests/stubs/freertos/: FreeRTOS.h  queue.h  semphr.h  task.h  timers.h
test/unit-tests/stubs/linenoise/: linenoise.h
test/unity-hw-tests/: CMakeLists.txt  README.md  diagram.json  gcov_dump.py  sdkconfig.coverage  sdkconfig.defaults  sdkconfig.test  test_common.cpp  test_common.h  test_entry_gate_hw.cpp  test_exit_gate_hw.cpp  wokwi.toml
test/unity-hw-tests/main/: CMakeLists.txt  Kconfig.projbuild  gcov_dumper.cpp  test_app_main.cpp
test/wokwi/: console_full.yaml  entry_exit_flow.yaml  entry_flow.yaml  exit_flow.yaml  parking_full.yaml
test/wokwi-tests/: console_full.yaml  entry_exit_flow.yaml  parking_full.yaml  unity_hw_tests.yaml
(+176 files in other folders)
